Admin Redirect and menu

--- a/Web2/Views/Admin/Index.cshtml
+++ b/Web2/Views/Admin/Index.cshtml
@@ -6,3 +6,9 @@
 
 <h2>@ViewBag.Title</h2>
 
+<td>
+    @Html.ActionLink("Users", "UserTable") |
+    @Html.ActionLink("Tasks", "TaskTable") |
+    @Html.ActionLink("Schedule","Schedule")
+
+</td>
