--- a/Web2/Views/Admin/UserTable.cshtml
+++ b/Web2/Views/Admin/UserTable.cshtml
@@ -8,6 +8,7 @@
 <h2>UserTable</h2>
 
 <p>
+    @Html.ActionLink("Back","Index") |
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
