--- a/Web2/Views/Admin/Edit.cshtml
+++ b/Web2/Views/Admin/Edit.cshtml
@@ -1,13 +1,13 @@
-﻿@model Web2.Models.RegisterViewModel
+﻿@model Web2.Models.ApplicationUser
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -24,26 +24,25 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Password, new { @class = "col-md-2 control-label" })
+        @Html.Label("Password:", new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+            @Html.Password("Password", new { @class = "form-control" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        @Html.Label("Confirm new password:", new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control" })
+            @Html.Password("ConfirmPassword", new { @class = "form-control" })
         </div>
     </div>
 
-    @{ 
+    @{
         List<SelectListItem> listItems = new List<SelectListItem>();
         listItems.Add(new SelectListItem
         {
             Text = "Employee",
-            Value = "Employee",
-            Selected = true
+            Value = "Employee"
         });
         listItems.Add(new SelectListItem
         {
@@ -53,7 +52,8 @@
         listItems.Add(new SelectListItem
         {
             Text = "Customer",
-            Value = "Customer"
+            Value = "Customer",
+            Selected = true
         });
     }
 
@@ -66,14 +66,14 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "UserList")
+    @Html.ActionLink("Back to List", "UserTable")
 </div>
 
 @section Scripts {
