--- a/Web2/Views/Customer/TaskList.cshtml
+++ b/Web2/Views/Customer/TaskList.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Web2.Models.CustomerTask>
+﻿@using Web2.Models;
+@model dynamic
 
 @{
     ViewBag.Title = "TaskList";
@@ -13,26 +14,25 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.title)
+            @Html.DisplayName("title")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.description)
+            @Html.DisplayName("description")
         </th>
         <th></th>
     </tr>
-   
-    @foreach (var item in Model)
+
+    @foreach (CustomerTask task in Model.tasks)
     {
-       
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.title)
+                @task.title
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.description)
+                @task.description
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { id = item.Id })
+                @Html.ActionLink("Details", "Details", new { id = @task.Id })
             </td>
         </tr>
     }
