--- a/Web2/Views/Admin/Index.cshtml
+++ b/Web2/Views/Admin/Index.cshtml
@@ -8,7 +8,7 @@
 
 <td>
     @Html.ActionLink("Users", "UserTable") |
-    @Html.ActionLink("Tasks", "TaskTable") |
+    @Html.ActionLink("Tasks", "TaskList") |
     @Html.ActionLink("Schedule","Schedule")
 
 </td>
