--- a/Web2/Views/Admin/Edit.cshtml
+++ b/Web2/Views/Admin/Edit.cshtml
@@ -26,19 +26,32 @@
     <div class="form-group">
         @Html.Label("Password:", new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.Password("Password", new { @class = "form-control" })
+            @Html.Password("Password", "", new { @class = "form-control" })
         </div>
     </div>
 
     <div class="form-group">
         @Html.Label("Confirm new password:", new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.Password("ConfirmPassword", new { @class = "form-control" })
+            @Html.Password("ConfirmPassword", "", new { @class = "form-control" })
         </div>
     </div>
+    @using Microsoft.AspNet.Identity
+    @using Microsoft.AspNet.Identity.Owin;
 
     @{
         List<SelectListItem> listItems = new List<SelectListItem>();
+
+        var userManager = Request.GetOwinContext().GetUserManager<ApplicationUserManager>();
+        var userRoles = userManager.GetRoles(Model.Id);
+        var role = userRoles[0];
+        listItems.Add(new SelectListItem
+        {
+            Text = role,
+            Value = role,
+            Selected = true
+        });
+
         listItems.Add(new SelectListItem
         {
             Text = "Employee",
@@ -52,9 +65,9 @@
         listItems.Add(new SelectListItem
         {
             Text = "Customer",
-            Value = "Customer",
-            Selected = true
+            Value = "Customer"
         });
+
     }
 
     <div class="form-group">
