--- a/Web2/Views/Admin/Index.cshtml
+++ b/Web2/Views/Admin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    //ViewBag.Title = "Index";
+    ViewBag.Title = "Admin's index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -8,7 +8,6 @@
 
 <td>
     @Html.ActionLink("Users", "UserTable") |
-    @Html.ActionLink("Tasks", "TaskList") |
-    @Html.ActionLink("Schedule","Schedule")
+    @Html.ActionLink("Tasks", "TaskList")
 
 </td>
