--- a/Web2/Views/Admin/UserTable.cshtml
+++ b/Web2/Views/Admin/UserTable.cshtml
@@ -39,7 +39,15 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                    @if (role == "Employee")
+                    {
+                        @Html.ActionLink("tasks", "tasksmapping", new { id = item.Id })
+                    }
+                    @if (role == "Customer")
+                    {
+                        @Html.ActionLink("relatives", "relativesmapping", new { id = item.Id })
+                    }
                 </td>
             </tr>
         }
