--- a/Web2/Views/Admin/Index.cshtml
+++ b/Web2/Views/Admin/Index.cshtml
@@ -9,6 +9,6 @@
 <td>
     @Html.ActionLink("Users", "UserTable") |
     @Html.ActionLink("Tasks", "TaskList") |
-    @Html.ActionLink("Schedule","Schedule")
+    @Html.ActionLink("Schedule","ScheduleList")
 
 </td>
