--- a/Web2/Views/Admin/DeleteTask.cshtml
+++ b/Web2/Views/Admin/DeleteTask.cshtml
@@ -21,6 +21,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.duration)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.duration)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.description)
         </dt>
 
