--- a/Web2/Views/Admin/ScheduleList.cshtml
+++ b/Web2/Views/Admin/ScheduleList.cshtml
@@ -6,7 +6,12 @@
 }
 
 <h2>Schedule</h2>
+<td>
+    @Html.ActionLink("Users", "UserTable") |
+    @Html.ActionLink("Tasks", "TaskList") |
+    @Html.ActionLink("Schedule", "ScheduleList")
 
+</td>
 <p>
     @Html.ActionLink("Back", "Index") |
     @Html.ActionLink("Create New", "CreateSchedule")
