--- a/Web2/Views/Admin/UserTable.cshtml
+++ b/Web2/Views/Admin/UserTable.cshtml
@@ -6,9 +6,13 @@
 }
 
 <h2>UserTable</h2>
+<td>
+    @Html.ActionLink("Users", "UserTable") |
+    @Html.ActionLink("Tasks", "TaskList") |
+    @Html.ActionLink("Schedule", "ScheduleList")
 
+</td>
 <p>
-    @Html.ActionLink("Back","Index") |
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
@@ -39,7 +43,15 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                    @if (role == "Employee")
+                    {
+                        @Html.ActionLink("tasks", "tasksmapping", new { id = item.Id })
+                    }
+                    @if (role == "Customer")
+                    {
+                        @Html.ActionLink("relatives", "relativesmapping", new { id = item.Id })
+                    }
                 </td>
             </tr>
         }
