--- a/Web2/Views/Admin/CreateSchedule.cshtml
+++ b/Web2/Views/Admin/CreateSchedule.cshtml
@@ -17,57 +17,56 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>Schedule</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.Label("Employee", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.employee_Id, new SelectList(employeeList, "Id", "UserName"), "Select", new { @class = "form-control" })
+    <div class="form-horizontal">
+        <h4>Schedule</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Employee", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.employee_Id, new SelectList(employeeList, "Id", "UserName"), "Select", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.employee_Id, "", new { @class = "text-danger" })
 
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Customer", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.customer_Id, new SelectList(customerList, "Id", "UserName"), "Select", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.customer_Id, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.Label("Task", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.task_Id, new SelectList(taskList, "Id", "title"), "Select", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.task_Id, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Date", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+
+                @Html.TextBoxFor(model => model.date, DateTime.Today.ToShortDateString(), new { @class = "form-control", @type = "date" })
+
+                @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Next" class="btn btn-default" />
+            </div>
         </div>
     </div>
-
-    <div class="form-group">
-        @Html.Label("Customer", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.customer_Id, new SelectList(customerList, "Id", "UserName"), "Select", new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.Label("Task", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.task_Id, new SelectList(taskList, "Id", "title"), "Select", new { @class = "form-control" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.Label("Date", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-
-            @Html.TextBoxFor(model => model.date, DateTime.Today.ToShortDateString(), new { @class = "form-control", @type = "date" })
-
-            @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
-        </div>
-    </div>
-  
-    <div class="form-group">
-        @Html.Label("Time", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.time, DateTime.Now.ToShortTimeString(), new { @class = "form-control", @type = "Time" })
-            @Html.ValidationMessageFor(model => model.time, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
-</div>
 }
 
 <div>
     @Html.ActionLink("Back to List", "ScheduleList")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
