--- a/Web2/Views/Admin/UserTable.cshtml
+++ b/Web2/Views/Admin/UserTable.cshtml
@@ -9,7 +9,7 @@
 <td>
     <button onclick="location.href='@Url.Action("UserTable", "Admin")';return false;" class="btn btn-default">Users</button>
     <button onclick="location.href='@Url.Action("ScheduleList", "Admin")';return false;" class="btn btn-default">Schedule</button>
-    <button onclick="location.href='@Url.Action("TaskList", "Admin")';return false;" class="btn btn-default">Task</button>
+    <button onclick="location.href='@Url.Action("TaskList", "Admin")';return false;" class="btn btn-default">Tasks</button>
 
     <br><br>
 </td>
