--- a/Web2/Views/Customer/Index.cshtml
+++ b/Web2/Views/Customer/Index.cshtml
@@ -1,7 +1,51 @@
-﻿
-@{
-    ViewBag.Title = "Index";
+﻿@model IEnumerable<Web2.Models.Schedule>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.employee_Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.customer_Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.task_Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.date)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.time)
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.employee_Id)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.customer_Id)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.task_Id)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.date)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.time)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+        </td>
+    </tr>
 }
 
-<h2>Index</h2>
-
+</table>
