--- a/Web2/Views/Admin/DeleteSchedule.cshtml
+++ b/Web2/Views/Admin/DeleteSchedule.cshtml
@@ -13,7 +13,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.employee_Id)
+            @Html.DisplayName("Employee")
         </dt>
 
         <dd>
@@ -21,7 +21,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.customer_Id)
+            @Html.DisplayName("Customer")
         </dt>
 
         <dd>
@@ -29,7 +29,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.task_Id)
+            @Html.DisplayName("Task")
         </dt>
 
         <dd>
@@ -37,7 +37,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.date)
+            @Html.DisplayName("Date")
         </dt>
 
         <dd>
@@ -45,7 +45,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.time)
+            @Html.DisplayName("Time")
         </dt>
 
         <dd>
