--- a/Web2/Views/Admin/TaskList.cshtml
+++ b/Web2/Views/Admin/TaskList.cshtml
@@ -19,13 +19,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.title)
+            @Html.DisplayName("Title")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.duration)
+            @Html.DisplayName("Duration")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.description)
+            @Html.DisplayName("Description")
         </th>
         <th></th>
     </tr>
