--- a/Web2/Views/Shared/_Layout.cshtml
+++ b/Web2/Views/Shared/_Layout.cshtml
@@ -16,15 +16,26 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    @using Microsoft.AspNet.Identity
+                    @using Microsoft.AspNet.Identity.Owin;
+                    @using Microsoft.AspNet.Identity;
+                    @{ 
+                        var role = "Home";
+                        if(System.Web.HttpContext.Current.User.Identity.IsAuthenticated)
+                        {
+                            var userManager = Request.GetOwinContext().GetUserManager<ApplicationUserManager>();
+                            role = userManager.GetRoles(User.Identity.GetUserId())[0];
+                        }
+                    }
                 </button>
-                @Html.ActionLink("HomeCare", "Index", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("HomeCare", "Index", role, new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
 
                     <!--<li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>-->
+                    <li>@Html.ActionLink("About", "About", "Home")</li>-->
+                    @Html.ActionLink("Contact", "Contact", "Home")</li>
 
                     
 
