--- a/Web2/Views/Employee/ScheduleList.cshtml
+++ b/Web2/Views/Employee/ScheduleList.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Web2.Models.MixViewModel>
-@using System.Activities.Expressions
+@using GoogleMaps.LocationServices;
 
 @{
     ViewBag.Title = "ScheduleList";
@@ -153,11 +153,37 @@
 
 @section scripts {
     <script>
-        function RouteVisit(date, time, lat, lng) {
+        function RouteVisit(name, date, time, lat, lng) {
+            this.name = name;
             this.date = date;
             this.time = time;
             this.lat = lat;
             this.lng = lng;
+        }
+
+        function createMarker(width, height, radius) {
+            var canvas, context;
+            canvas = document.createElement("canvas");
+            canvas.width = width;
+            canvas.height = height;
+            context = canvas.getContext("2d");
+            context.clearRect(0, 0, width, height);
+            context.fillStyle = "rgba(255,255,0,1)";
+            context.strokeStyle = "rgba(0,0,0,1)";
+            context.beginPath();
+            context.moveTo(radius, 0);
+            context.lineTo(width - radius, 0);
+            context.quadraticCurveTo(width, 0, width, radius);
+            context.lineTo(width, height - radius);
+            context.quadraticCurveTo(width, height, width - radius, height);
+            context.lineTo(radius, height);
+            context.quadraticCurveTo(0, height, 0, height - radius);
+            context.lineTo(0, radius);
+            context.quadraticCurveTo(0, 0, radius, 0);
+            context.closePath();
+            context.fill();
+            context.stroke();
+            return canvas.toDataURL();
         }
 
         var map, infoWindow;
@@ -165,24 +191,28 @@
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'),
                 {
-                    center: { lat: -34.397, lng: 150.644 },
+                    center: { lat: 55, lng: 12 },
                     zoom: 6
                 });
             infoWindow = new google.maps.InfoWindow;
 
             let markerIcon = {
-                url: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',
-                size: new google.maps.Size(20, 32),
-                origin: new google.maps.Point(0, 0),
-                anchor: new google.maps.Point(0, 32),
-                labelOrigin: new google.maps.Point(40, 33)
+                url: createMarker(25, 25, 4),
+                labelOrigin: new google.maps.Point(55, 12)
             }
 
             let visits = new Array();
+            
+
             @foreach (var item in Model)
             {
-                if (item.schedule.employee_Id == User.Identity.GetUserId()) {
-                    @:visits.push(new RouteVisit("21.5.2018", "10:10", 55.703939, 12.5354754));
+                if (item.schedule.employee_Id == User.Identity.GetUserId() && item.customer.Address != null) {
+                    System.Diagnostics.Debug.WriteLine("   schedule valid, lat: " + item.customer.Latitude + ", lon: " + item.customer.Longitude);
+                    var lat = item.customer.Latitude.ToString().Replace(",", ".");
+                    var lon = item.customer.Longitude.ToString().Replace(",", ".");
+
+                    @:visits.push(new RouteVisit("@item.task.title", "@item.schedule.date", "@item.schedule.time", @lat, @lon));
+                    
                 }
             }
 
@@ -196,9 +226,9 @@
                     clickable: false,
                     icon: markerIcon,
                     label: {
-                        text: visits[i].time,
+                        text: visits[i].name,
                         color: "#000000",
-                        fontSize: "16px",
+                        fontSize: "12px",
                         fontWeight: "bold"
                     }
                 });
