--- a/Web2/Views/Admin/TaskList.cshtml
+++ b/Web2/Views/Admin/TaskList.cshtml
@@ -10,6 +10,7 @@
     <button onclick="location.href='@Url.Action("UserTable", "Admin")';return false;" class="btn btn-default">Users</button>
     <button onclick="location.href='@Url.Action("ScheduleList", "Admin")';return false;" class="btn btn-default">Schedule</button>
     <button onclick="location.href='@Url.Action("TaskList", "Admin")';return false;" class="btn btn-default">Tasks</button>
+    <button onclick="location.href='@Url.Action("RelativeList", "Admin")';return false;" class="btn btn-default">Relatives</button>
 
     <br><br>
 </td>
