Auto stash before merge of "master" and "origin/master"

--- a/Web2/Views/Employee/ScheduleList.cshtml
+++ b/Web2/Views/Employee/ScheduleList.cshtml
@@ -5,6 +5,7 @@
     //ViewBag.Title = "ScheduleList";
     ViewBag.Title = ViewBag.dateTitle;
     Layout = "~/Views/Shared/_Layout.cshtml";
+   
 }
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -13,8 +14,28 @@
 <h2>Schedule</h2>
 <td>
     <button onclick="location.href='@Url.Action("ScheduleList", "Employee")';return false;" class="btn btn-default">Schedule</button>
-    <input type="button" id="refreshButton" value="REFRESH" />
-    <input type="text" id="scheduleDate" />
+    <div class="form-horizontal">
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.Label("Date", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+
+                @Html.TextBoxFor(model => model.First()., DateTime.Today.ToShortDateString(), new { @class = "form-control", @type = "date" })
+
+                @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+    }
+    @Html.TextBox(, DateTime.Today.ToShortDateString(), new { @class = "form-control", @type = "date" })
+
     <br><br>
 </td>
 
@@ -66,6 +87,8 @@
 
     @foreach (var item in Model)
     {
+
+
         if (item.schedule.employee_Id == User.Identity.GetUserId())
         {
 
@@ -87,7 +110,8 @@
                 </td>
                 <td></td>
             </tr>
-        }
+            }
+        
     }
 
 </table>
