employee view upgrade

--- a/Web2/Views/Customer/ScheduleList.cshtml
+++ b/Web2/Views/Customer/ScheduleList.cshtml
@@ -13,6 +13,7 @@
 <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
 
 
+<h2>Schedule</h2>
 <td>
     <button onclick="location.href='@Url.Action("ScheduleList", "Employee")';return false;" class="btn btn-default">Schedule</button>
 </td>
